Fix the padding break on left

--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ body{
   margin-top: 1rem;
   margin-bottom: 1rem;
   line-height: 1.5;
+  padding: 0 1rem;
   font-size: 1.2rem;
   color: #0d11179d;
 }
@@ -217,8 +218,7 @@ button .fa {
     text-align: center;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
-    font-size: 1.2rem;
-    padding: 0 1rem;
+    font-size: 1rem;
     color: #0d11179d;
   }
 
